--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,5 +1,6 @@
 <script src="../assets/vendors/jquery/jquery.js"></script>
 <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+<script src="../assets/vendors/template/template.js"></script>
 <script>NProgress.done()</script>
 </body>
 </html>
