--- a/views/layout/aside.ejs
+++ b/views/layout/aside.ejs
@@ -14,14 +14,14 @@
             <ul id="menu-posts" class="collapse">
                 <li><a href="posts.html">所有文章</a></li>
                 <li><a href="post-add.html">写文章</a></li>
-                <li><a href="categories.html">分类目录</a></li>
+                <li><a href="categories">分类目录</a></li>
             </ul>
         </li>
         <li>
             <a href="comments.html"><i class="fa fa-comments"></i>评论</a>
         </li>
         <li class="active">
-            <a href="users.html"><i class="fa fa-users"></i>用户</a>
+            <a href="users"><i class="fa fa-users"></i>用户</a>
         </li>
         <li>
             <a href="#menu-settings" class="collapsed" data-toggle="collapse">
