--- a/views/users.ejs
+++ b/views/users.ejs
@@ -43,41 +43,43 @@
               <!-- show when multiple checked -->
               <a id="delAll" class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
             </div>
-            <table class="table table-striped table-bordered table-hover">
-              <thead>
-                <tr>
-                  <th class="text-center" width="40"><input type="checkbox" id="selAll"></th>
-                  <th class="text-center" width="80">头像</th>
-                  <th>邮箱</th>
-                  <th>别名</th>
-                  <th>昵称</th>
-                  <th>状态</th>
-                  <th class="text-center" width="100">操作</th>
-                </tr>
-              </thead>
-              <tbody id="tbody">
-                <% for(var i = 0; i < result.length; i ++) { %>
+            <form id="tableForm">
+              <table class="table table-striped table-bordered table-hover">
+                <thead>
                   <tr>
-                    <td class="text-center"><input class="boxitem" type="checkbox"></td>
-                    <td class="text-center"><img class="avatar" src="<%= result[i].avatar?result[i].avatar:'/assets/img/default.png' %>"></td>
-                    <td>
-                      <%= result[i].email %>
-                    </td>
-                    <td>
-                      <%= result[i].slug %>
-                    </td>
-                    <td>
-                      <%= result[i].nickname %>
-                    </td>
-                    <td>激活</td>
-                    <td class="text-center">
-                      <a href="post-add.php" id="<%= result[i].id %>" class="btn btn-default btn-xs">编辑</a>
-                      <a href="javascript:;" id="<%= result[i].id %>" class="btn btn-danger btn-xs">删除</a>
-                    </td>
+                    <th class="text-center" width="40"><input type="checkbox" id="selAll"></th>
+                    <th class="text-center" width="80">头像</th>
+                    <th>邮箱</th>
+                    <th>别名</th>
+                    <th>昵称</th>
+                    <th>状态</th>
+                    <th class="text-center" width="100">操作</th>
                   </tr>
-                  <% } %>
-              </tbody>
-            </table>
+                </thead>
+                <tbody id="tbody">
+                  <% for(var i = 0; i < result.length; i ++) { %>
+                    <tr>
+                      <td class="text-center"><input class="boxitem" name="id" value="<%= result[i].id %>" type="checkbox"></td>
+                      <td class="text-center"><img class="avatar" src="<%= result[i].avatar?result[i].avatar:'/assets/img/default.png' %>"></td>
+                      <td>
+                        <%= result[i].email %>
+                      </td>
+                      <td>
+                        <%= result[i].slug %>
+                      </td>
+                      <td>
+                        <%= result[i].nickname %>
+                      </td>
+                      <td>激活</td>
+                      <td class="text-center">
+                        <a href="post-add.php" id="<%= result[i].id %>" class="btn btn-default btn-xs">编辑</a>
+                        <a href="javascript:;" id="<%= result[i].id %>" class="btn btn-danger btn-xs">删除</a>
+                      </td>
+                    </tr>
+                    <% } %>
+                </tbody>
+              </table>
+            </form>
           </div>
           <!-- 列表区域 end -->
         </div>
@@ -89,7 +91,7 @@
       <script id="tmp" type="text/html">
         {{ each data }}
         <tr>
-          <td class="text-center"><input class="boxitem" type="checkbox"></td>
+          <td class="text-center"><input class="boxitem" name="id" value="{{$value.id}}" type="checkbox"></td>
           <td class="text-center"><img class="avatar" src="{{$value.avatar?$value.avatar: '/assets/img/default.png'}}"></td>
           <td>
             {{$value.email}}
@@ -297,7 +299,7 @@
           checked ? $('#delAll').show() : $('#delAll').hide()
         })
         // 使用事件委托给多选框绑定事件
-        $('#tbody').on('click', '.boxitem', function(){
+        $('#tbody').on('click', '.boxitem', function () {
           // 如果同时在两个多选框被选中，显示批量删除
           // 得到当前数据表格中所有选中的多选框
           let selCount = 0
@@ -305,7 +307,7 @@
             // ele： 是遍历中的每一个 dom 元素
             var result = $(ele).prop('checked')
             if (result) {
-              selCount ++
+              selCount++
             }
           })
           selCount >= 2 ? $('#delAll').show() : $('#delAll').hide()
@@ -313,5 +315,27 @@
           let totalCount = $('.boxitem').length
           // 如果所有多选框的数据与选中的数据是相同的，则表头中的多选框也要选中
           totalCount === selCount ? $('#selAll').prop('checked', true) : $('#selAll').prop('checked', false)
+        })
+        // 给批量删除绑定一个点击事件：
+        $('#delAll').click(function () {
+          // 得到选中多选框数据的 id
+          // serialize: 获取当前表单元素中的所有内容，并且接收成为字符串
+          var params = $('#tableForm').serialize()
+          // 将得到的 id 提交到服务器中
+          $.ajax({
+            url: '/delUsersByIds',
+            type: 'POST',
+            data: params,
+            success: res => {
+              let { status, msg } = res
+              if (status === 200) {
+                alert(msg)
+                // 重新学好
+                getAllUsers()
+              } else {
+                alert('出错啦')
+              }
+            }
+          })
         })
       </script>
